# FIAP_Oil_prices_Predictor

./: README.md  app.py  lstm_model.h5  lstm_model.keras  oil_prices_sorted_since_2023.csv  pyproject.toml  requirements.txt
data/: brent_crude_oil_prices.csv
lstm_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
lstm_model/variables/: variables.data-00000-of-00001  variables.index
notebook/: analysis.ipynb  lstm.joblib  lstm_model.h5  oil_prices_sorted_since_2013.csv
notebook/.ipynb_checkpoints/: analysis-checkpoint.ipynb
notebook/lstm_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notebook/lstm_model/variables/: variables.data-00000-of-00001  variables.index
notebook/output/: lstm_model.h5
