[tool.poetry]
name = "fiap-petroleum-price-predictor"
version = "0.1.0"
description = ""
authors = ["Tadeu Tupinambá <tadeu.tupiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
imbalanced-learn = "^0.12.2"
streamlit = "^1.34.0"
lxml = "^5.2.1"
statsmodels = "^0.14.2"
keras = "^3.3.3"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
